singolo2.css
@font-face {
    font-family: Lato; 
    src: url(assets/Lato-Regular.ttf);
}
@font-face {
    font-family: Lato-Bold; 
    src: url(assets/Lato-Bold.ttf);
}
@font-face {
    font-family: Lato-Black; 
    src: url(assets/Lato-Black.ttf);
}
html {
    font-family: "Lato", sans-serif;
}
body {width: 1020px;
    margin:0 auto;
   }
.wraper {
    width: 1020px;
    overflow: hidden; /*убрали белую полоску сверху*/
}

.portfolio {
   
    height: 865px;
    background-color: #2d303a;
    margin: 0px;
}
/*overflow: hidden; управляет отображением содержания
     блочного элемента, если оно целиком не помещается и выходит за область заданных размеров. hidden
    Отображается только область внутри элемента, остальное будет скрыто. */

.portfolio__caption {
    font-size: 29.5px; 
    line-height: 18px;
    color: #666d89;
    font-family: "Lato-Black";
    font-weight: 1500;
    /*text-align: left;*/
    padding-top: 69.5px;
    padding-left: 40px;
    margin: 0px;
    letter-spacing: 0.45px;
}
.portfolio__text { 
    padding-top: 26px;
    padding-left: 41px;
    font-size: 18px;
    line-height: 30px;
    color: #767e9e;
    font-family: "Lato";
    font-weight: 300;
    text-align: left;
    margin: 0px;
    letter-spacing: -0.36px;
}

.portfolio__buttons {
    padding-top: 10px;
    padding-left: 41px;
}

.portfolio__button {
    padding-top: 0px;
    padding-bottom: 2px;
    margin-right: 6px;
    font-family: "Lato";
    font-size: 12px;
    color: #666d89;
    height: 22px;
    border-radius: 5px;
    background-color:   #2d303a;
    background-repeat:no-repeat;
    border: 1px solid  #666d89;
    cursor:pointer;
    overflow: hidden;
}
.portfolio_button_all {
    width: 29px;
    color: #dedede;
    border: 1px solid  #c5c5c5;
}
.portfolio_button_artwork {
    margin-left: -1px;
}
.portfolio__imgs {
    margin-top: 19px;
    padding-right: 30px;
    padding-left: 31px;
    display: grid; 
    grid-row-gap: 19px; /*растояние между рядами*/
    grid-template-columns: 1fr 1fr 1fr 1fr; /*определяет количество, наименование и ширину столбцов и строк в макете
                                             сетки, задает шаблон макета сетки, ссылаясь при этом на имена областей
                                              элементов, которые задаются с помощью свойства*/
    grid-template-rows: 1fr 1fr 1fr;
    justify-self: center;
    align-self: center;
}
.portfolio__img {  
    width:220px; /* ширина блока */
    height:188px; /* высота блока */
    margin: auto;
    }
.portfolio_img_img1 {
    background: url(assets/img1.svg);
}

.portfolio_img_img2 {
    background: url(assets/img2.svg);
}
.portfolio_img_img3 {
    background: url(assets/img3.svg);
}
.portfolio_img_img4 {
    background: url(assets/img4.svg);
}
.portfolio_img_img5 {
    background: url(assets/img5.svg);
}
.portfolio_img_img6 {
    background: url(assets/img6.svg);
}
.portfolio_img_img7 {
    background: url(assets/img7.svg);
}
.portfolio_img_img8 {
    background: url(assets/img8.svg);
}
.portfolio_img_img9 {
    background: url(assets/img9.svg);
}
.portfolio_img_img10 {
    background: url(assets/img10.svg);
}
.portfolio_img_img11 {
    background: url(assets/img11.svg);
}
.portfolio_img_img12 {
    background: url(assets/img12.svg);
}

.portfolio__dottom { 
    height: 5px;
    background-color:#323746
}
.about-us {
    height: 734px;
    background-color: #f2f2f2;
} 
.about-us__dottom {
    height: 6px;
    background-color:#f2f2f2;
}

.about-us__caption {
    padding-top: 68px;
    margin: 0;
    margin-left: 41px;
    font-size: 30px;
    line-height: 18px;
    color: #666d89;
    font-family: "Lato-Black";
    font-weight: 900;
    text-align: left;
    letter-spacing: -0.15px;
}
.about-us__text {
    text-align:justify;
    margin-top: 27px;
    padding-left: 40.5px;
    width: 939px;
    height: 57px;
    font-size: 18px;
    line-height: 30px;
    color: #767e9e;
    font-family: "Lato";
    font-weight: 300;
    letter-spacing: -0.33px;
}

.persons { 
    margin-top: 48px;
    padding-left: 39.5px;
    padding-right: 33.5px;
    display: grid;
    grid-column-gap: 14px; /*растояние между рядами*/
    grid-template-columns: 1fr 1fr 1fr; 
    grid-template-rows: 1fr;
    justify-self: center;
    align-self: center;
}
.person {
    width: 302px;
}

.person__name {
    margin-top: 13px;
    font-size: 18px;
    line-height: 18px;
    color: #666d89;
    font-family: "Lato-Black";
    font-weight: 900;
    text-align: left;
    margin-bottom: 0;
}
.person__text {
    margin-top: 10px;
    width: 300px;
    font-size: 12px;
    line-height: 21px;
    color: #767e9e;
    font-family: "Lato";
    font-weight: 400;
    text-align: left;
    letter-spacing: -0.2px;
    text-align:justify;
}

.person__social-media {
    height: 110px;
}
.person__social-media {
    padding-top: 10px;
    padding-left: 0.5px;
}
.person__link {
    padding-right: 2px;
}

